# UCL_Robotic

CW1/comp0037_planner_controller/: AAlways0_planner.py  ADiagonal_planner.py  ADiagonal_standalone_node.py  AEuclidean_planner.py  AManhattan_planner.py  ANonNeg_planner.py  AOctile_planner.py  CMakeLists.txt  controller_base.py  dijkstra_planner.py  fifo_planner.py  general_forward_search_algorithm.py  greedy_planner.py  lifo_planner.py  move2goal_controller.py  package.xml  planned_path.py  run_ADiagonal_standalone.py
CW1/comp0037_planner_controller/scripts/: AAlways0_standalone_node.py  ANonNeg_standalone_node.py  dijkstra_standalone_node.py  greedy_standalone_node.py  run_AEuclidean_standalone.py  run_AManhattan_standalone.py  run_AOctile_standalone.py  run_dijkstra_standalone.py  run_fifo_standalone.py  run_greedy_standalone.py  run_lifo_standalone.py
CW1/comp0037_planner_controller/src/comp0037_planner_controller/: AAlways0_planner.py  AEuclidean_planner.py  AManhattan_planner.py  ANonNeg_planner.py  AOctile_planner.py  dijkstra_planner.py  fifo_planner.py  general_forward_search_algorithm.py  greedy_planner.py
CW1/results/: precess_results.py  results.xlsx  ~$results.xlsx
CW1/ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
CW2/: entropy_log.csv
CW2/comp0037_explorer/launch/: explorer.launch
CW2/data/: entropy_log.xls  entropy_log_default.csv  entropy_log_nearest.csv  largest_entropy_log.csv  nearest_entropy_log.csv
CW3/: planned_path.py  reactive_planner_controller.py
lab1/comp0037_example/scripts/: moving_the_robot.py
(+160 files in other folders)
